  and Score-P just includes Cube's library components that are
  necessary for measurements and scoring. The configure option
  --with-cube was replace by --with-cubew and --with-cubelib. They
  need to be provided a PATH to cubew-config and cubelib-config,
  respectively, if not already in PATH. The Cube GUI is separately
  available from http://www.scalasca.org.

Bugfixes:

------------------- Released version 3.1 -----------------------------

Features and improvements:

- The induced penalty to access thread-local storage variables was
  considerably reduced for some compilers, notable for the Intel
  compilers.
- If both OpenMP instrumentation options, omp:tpd and omp:ancestry,
  are supported, use omp:ancestry as default. This works around a
  problem found with recent Intel compilers (e.g., 17.0.0) and the
  omp:tpd option.
- The GCC compiler instrumentation plug-in now instruments functions
  that will not return in the usual way, like, e.g., a Pthread
  start_routine that calls pthread_exit.

Bugfixes:

- Fix compilation error during instrumentation, if the command line
  contains a header file.
- Fix loosing parameter call-paths by avoiding multiple definitions of
  the same parameters.
- Fix that memory allocation measurements are disabled if the
  user explicitly specifies --memory.
- Fix conflict of function wrapping with IPA on BlueGene systems.
- Do not preprocess assembler files anymore.
- Fix race condition in parallel make (make -j). Note that parallel
  'make check' still exhibits race conditions due to Fortran
  dependency issues.
- Fix segmentation fault in the profile when memory operations
  and metric counters are recorded at the same time.
- Improve detection of ARM and Cray platforms.
- Allow for shell variables in configure options. Options like
  '--includedir=\${prefix}/include' caused configure to fail.

------------------- Released version 3.0 -----------------------------

Note: In this version, we switch from a 'major.minor.bugfix'